# opclash_cli

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: release.yml
docs/: git-commit提交说明.md
docs/superpowers/plans/: 2026-04-11-openclash-cli-v1-phase-1.md
docs/superpowers/specs/: 2026-04-11-openclash-cli-design.md
opclash_cli/: __init__.py  errors.py  local_config.py  main.py  operation_log.py  output.py  subscription_archive.py  subscription_services.py
opclash_cli/adapters/: controller.py  luci_rpc.py
opclash_cli/commands/: doctor.py  init.py  nodes.py  service.py  subscription.py
skills/opclash_cli/: SKILL.md
skills/opclash_cli-git-commit-rules/: SKILL.md
skills/opclash_cli_skill/: SKILL.md
tests/: test_bootstrap_cli.py  test_controller_adapter.py  test_doctor_and_skill.py  test_init_commands.py  test_luci_rpc.py  test_nodes_read_commands.py  test_nodes_switch_command.py  test_subscription_service_mutations.py  test_subscription_service_read_commands.py
