[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opclash_cli"
version = "0.1.0"
description = "Remote OpenClash management CLI"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "tomli-w>=1.0.0",
]

[project.scripts]
opclash_cli = "opclash_cli.main:main"

[tool.setuptools]
packages = ["opclash_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
